# NBANetwork

./: .gitignore  .python-version  .vscode  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  config.yaml  pyproject.toml  requirements.txt  run_pipeline.sh  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  mkdocs.yml  usage.rst
docs/docs/: index.md
nbanetwork/: __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
nbanetwork/dataset/: assist_relation.py  download_from_kaggle_hub.py  gnn_players_dataset.py  increase_edge_by_assist.py  increase_edge_by_same_team.py  increase_neg_edge.py  make_assist_relation_data.py  make_player_edge_by_assist_in_same_team.py  make_player_nodes.py  player_nodes.py  pos_edge_player_by_assist.py  pos_edge_player_in_same_team.py  pos_edge_player_with_assists.py  pos_same_team_neg_other_team.py  split_dataset.py  split_edge2posneg_by_assist.py
nbanetwork/modeling/: gnn_models.py  initializer.py  predict.py  predict_compatibility_players.py  predict_players_chemistry.py  predict_players_chemistry_by_assist.py  predict_players_chemistry_by_same_team.py  train.py  train_gnn_players.py  train_gnn_players_by_assist.py  train_gnn_players_by_same_team.py
nbanetwork/plots/: plot_common_player_relation_network.py  plot_common_player_relation_network_by_assist.py  (+1 more)
notebooks/: analysis_raw_data.ipynb
sagemaker_inference/: .gitignore  test_inference.py
scripts/: make_dataset.sh  predict_gnn_players.sh
tests/: __init__.py  test_nbanetwork.py
(+31 files in other folders)
